test/static/wrong/module1.kk
module static/wrong/module1 {
  import static/modA
  import static/modB

  alias ok = int
}
